--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
     <string name="app_name">Bike Parking</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
+
+    <!-- Navigation Drawer menu labels -->
+    <string name="nav_home">Home</string>
+    <string name="nav_contributions">Your contributions</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_instructions">Instructions</string>
+    <string name="nav_privacypolicy">Privacy Policy</string>
+    <string name="nav_about">About</string>
+
+    <!-- Toolbar titles when navigation menu item is selected -->
+    <string-array name="nav_item_activity_titles">
+        <item>@string/nav_home</item>
+        <item>@string/nav_contributions</item>
+        <item>@string/nav_settings</item>
+        <item>@string/nav_instructions</item>
+        <item>@string/nav_privacypolicy</item>
+        <item>@string/nav_about</item>
+    </string-array>
+
+    <string name="activity_title_about_us">About Us</string>
+    <string name="activity_title_privacy_policy">Privacy Policy</string>
+    <string name="action_clear_all">Clear All</string>
+    <string name="action_logout">Logout</string>
+    <string name="action_mark_all_read">Mark All as Read</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="tag_line">Park your bike in a safe place...</string>
 </resources>
