--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
 
+    <string name="device_not_supported">This device is not supported to show map in this app.</string>
+    <string name="install_play_service">Google play service is needed to show map. Please install it first.</string>
+    <string name="map_load_fail">Could not load map. Please try again.</string>
 </resources>
